--- a/ms-security/src/main/resources/application.properties
+++ b/ms-security/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8181
-spring.data.mongodb.uri=mongodb://jackelinerivera23296:2IGGgjAJviMovitF@ac-svy2uek-shard-00-00.dmxycow.mongodb.net:27017,ac-svy2uek-shard-00-01.dmxycow.mongodb.net:27017,ac-svy2uek-shard-00-02.dmxycow.mongodb.net:27017/?replicaSet=atlas-nvg0uo-shard-0&ssl=true&authSource=admin
+spring.data.mongodb.uri=mongodb+srv://danielquintero31429:wT2M73IFo7jDJ0Fb@cluster0.wuy0rj3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=security_db
 jwt.secret=mi_secreto
 jwt.expiration=3600000
+notifications.baseurl=http://localhost:8080/send_email
