Dado que el compañero no explicó la logica de su código y decidió no presentarse a la sustentación se realiza la refactorización necesaria para 2FA, al momento se asigna una contraseña al nuevo usuario, se permite realizar el login con el token generado aleatoriamente, se verifica el token y se genera el jwt, todo lo anterior guarda el registro de inicio de sesion en SessionRepository.java

--- a/ms-security/src/main/resources/application.properties
+++ b/ms-security/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.data.mongodb.uri=mongodb+srv://danielquintero31429:wT2M73IFo7jDJ0Fb@cluster0.wuy0rj3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+server.port=8181
+spring.data.mongodb.uri=mongodb+srv://jackelinerivera23296:2IGGgjAJviMovitF@cluster0.dmxycow.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=security_db
 jwt.secret=mi_secreto
 jwt.expiration=3600000
-notifications.baseurl=http://localhost:8080/send_email
