Adición ms-notificaciones

--- a/ms-security/src/main/resources/application.properties
+++ b/ms-security/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.data.mongodb.uri=mongodb+srv://jackelinerivera23296:2IGGgjAJviMovitF@clus
 spring.data.mongodb.database=security_db
 jwt.secret=mi_secreto
 jwt.expiration=3600000
+debug=true
