--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,7 +23,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "allowedCommonJsDependencies": [
-              "chart.js"
+              "chart.js",
+              "sweetalert2"
             ],
             "assets": [
               "src/favicon.ico",
